--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>
-            My Website
-        </title>
+        <title>My Resume</title>
     </head>
     <body>
-        <h1>Ivan's Portfolio</h1>
-        <h2>I am a Web Developer</h2>
+        <h1>Resume of Ivan Eng</h1>
+        <img src="./Piggo.png" height="100" alt="Bacon Ipsum title photo">
+        <hr/>
+
+        <h2>Summary</h2>
+        <p>Bacon ipsum dolor amet enim pork belly bacon nulla elit. Dolore landjaeger pork cillum shoulder sirloin, alcatra ground round enim. Quis ex ullamco andouille, pork loin id magna. Pariatur sed commodo, eu adipisicing dolore consequat exercitation shankle aute ball tip shoulder ad. Aute capicola porchetta ground round chuck buffalo sirloin anim veniam eiusmod ullamco meatloaf. Tenderloin enim sausage chislic cillum sint prosciutto porchetta filet mignon leberkas. Et ground round ipsum sirloin chicken, non burgdoggen minim flank pork consequat.</p>
         <hr>
-        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img class="fit-picture" height="200" src="./assets/images/movie-ranking.png" alt="picture of movie project"/>
-        <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-        <img height="200" src="./assets/images/birthday-invite.png" alt="Picture of birthday invite project"/>
-        <hr>
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me</a>
+
+        <h2>Educational History</h2>
+        <h4>Formal Education</h4>
+        <ul>
+            <li>National University of Singapore (2017-2021)</li>
+            <li>Meridian Junior College (2013-2014)</li>
+            <li>Xinmin Secondary School (2009-2012)</li>
+            <li>Maris Stella High School [Primary] (2003-2008)</li>
+        </ul>
+        <h4>Certifications</h4>
+        <ul>
+            <li>Certified in Cybersecurity [CC] by ISC2 (2024)</li>
+            <li>Certified Financial Modeling and Valuations Analyst [FMVA] by CFI (2023)</li>
+        </ul>
+        <hr/>
+
+        <h2>Work Experience</h2>
+        <h4>Mitsui &Co [Asia Pacific] (2021 - Prensent)</h4>
+        <h5>Assistant Manager (2024 - Present)</h5>
+        <ul>
+            <li>Alcatra strip steak sausage, turkey salami shoulder fatback sirloin bresaola burgdoggen tongue pork pastrami porchetta.</li>
+            <li>Burgdoggen hamburger ball tip chislic landjaeger kevin, salami prosciutto tail doner porchetta frankfurter shankle.</li>
+            <li>Burgdoggen ribeye tail, salami cupim shoulder t-bone.</li>
+        </ul>
+        <hr/>
+
+        <h2>Relevant Skills</h2>
+        <ol>
+            <li>Alcatra strip steak sausage, turkey salami shoulder fatback sirloin bresaola burgdoggen tongue pork pastrami porchetta.</li>
+            <li>Burgdoggen hamburger ball tip chislic landjaeger kevin, salami prosciutto tail doner porchetta frankfurter shankle.</li>
+            <li>Burgdoggen ribeye tail, salami cupim shoulder t-bone.</li>
+        </ol>
+        <hr/>
+
+        <footer>
+            <h4>Footnotes:</h4>
+            <p>This document was created with the sole consultation of Ivan and a healthy dose of Google.</p>
+            <a href="./contactme.html">Contact me today!</a>
+        </footer>
     </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
