--- a/contactme.html
+++ b/contactme.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Contact Page</h1>
         <p>Hi all, if you are here, thank you for your kind efforts in looking through my resume, I hope it was interesting for you</p>
-        <p>Unfortunately I will not be putting my contact details on a public Github, at least not while my skills are still sub par. Till next time!</p>
+        <p>Unfortunately I will not be putting my contact details on a public Github, at least not while my skills are still sub par, but feel free to hit me up on LinkedIn. Till next time!</p>
     </body>
 </html>
